src/javap/JavapParser.js
// Generated from Javap.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var JavapListener = require('./JavapListener').JavapListener;
var JavapVisitor = require('./JavapVisitor').JavapVisitor;

var grammarFileName = "Javap.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'Compiled'", "'from'", "'\"'", "'class'", "'extends'", 
                     "'implements'", "'interface'", "'public'", "'private'", 
                     "'protected'", "'abstract'", "'final'", "','", "'.'", 
                     "'<'", "'>'", "'['", "']'", "'?'", "'super'", "'{'", 
                     "'}'", "'native'", "'static'", "'strictfp'", "'synchronized'", 
                     "'transient'", "'volatile'", "'{}'", "';'", "'('", 
                     "')'", "'throws'", "'...'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, "Identifier", 
                      "WS" ];

var ruleNames =  [ "compilationUnit", "sourceDeclaration", "classOrInterface", 
                   "classDeclaration", "interfaceDeclaration", "classModifier", 
                   "interfaceModifier", "typeList", "type", "packageName", 
                   "typeArguments", "typeArgument", "classBody", "interfaceBody", 
                   "modifier", "classMember", "interfaceMember", "constructorDeclaration", 
                   "fieldDeclaration", "methodDeclaration", "throwsException", 
                   "varargs", "methodArguments" ];

function JavapParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

JavapParser.prototype = Object.create(antlr4.Parser.prototype);
JavapParser.prototype.constructor = JavapParser;

Object.defineProperty(JavapParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

JavapParser.EOF = antlr4.Token.EOF;
JavapParser.T__0 = 1;
JavapParser.T__1 = 2;
JavapParser.T__2 = 3;
JavapParser.T__3 = 4;
JavapParser.T__4 = 5;
JavapParser.T__5 = 6;
JavapParser.T__6 = 7;
JavapParser.T__7 = 8;
JavapParser.T__8 = 9;
JavapParser.T__9 = 10;
JavapParser.T__10 = 11;
JavapParser.T__11 = 12;
JavapParser.T__12 = 13;
JavapParser.T__13 = 14;
JavapParser.T__14 = 15;
JavapParser.T__15 = 16;
JavapParser.T__16 = 17;
JavapParser.T__17 = 18;
JavapParser.T__18 = 19;
JavapParser.T__19 = 20;
JavapParser.T__20 = 21;
JavapParser.T__21 = 22;
JavapParser.T__22 = 23;
JavapParser.T__23 = 24;
JavapParser.T__24 = 25;
JavapParser.T__25 = 26;
JavapParser.T__26 = 27;
JavapParser.T__27 = 28;
JavapParser.T__28 = 29;
JavapParser.T__29 = 30;
JavapParser.T__30 = 31;
JavapParser.T__31 = 32;
JavapParser.T__32 = 33;
JavapParser.T__33 = 34;
JavapParser.Identifier = 35;
JavapParser.WS = 36;

JavapParser.RULE_compilationUnit = 0;
JavapParser.RULE_sourceDeclaration = 1;
JavapParser.RULE_classOrInterface = 2;
JavapParser.RULE_classDeclaration = 3;
JavapParser.RULE_interfaceDeclaration = 4;
JavapParser.RULE_classModifier = 5;
JavapParser.RULE_interfaceModifier = 6;
JavapParser.RULE_typeList = 7;
JavapParser.RULE_type = 8;
JavapParser.RULE_packageName = 9;
JavapParser.RULE_typeArguments = 10;
JavapParser.RULE_typeArgument = 11;
JavapParser.RULE_classBody = 12;
JavapParser.RULE_interfaceBody = 13;
JavapParser.RULE_modifier = 14;
JavapParser.RULE_classMember = 15;
JavapParser.RULE_interfaceMember = 16;
JavapParser.RULE_constructorDeclaration = 17;
JavapParser.RULE_fieldDeclaration = 18;
JavapParser.RULE_methodDeclaration = 19;
JavapParser.RULE_throwsException = 20;
JavapParser.RULE_varargs = 21;
JavapParser.RULE_methodArguments = 22;

function CompilationUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_compilationUnit;
    return this;
}

CompilationUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CompilationUnitContext.prototype.constructor = CompilationUnitContext;

CompilationUnitContext.prototype.EOF = function() {
    return this.getToken(JavapParser.EOF, 0);
};

CompilationUnitContext.prototype.sourceDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SourceDeclarationContext);
    } else {
        return this.getTypedRuleContext(SourceDeclarationContext,i);
    }
};

CompilationUnitContext.prototype.classOrInterface = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassOrInterfaceContext);
    } else {
        return this.getTypedRuleContext(ClassOrInterfaceContext,i);
    }
};

CompilationUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitCompilationUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.CompilationUnitContext = CompilationUnitContext;

JavapParser.prototype.compilationUnit = function() {

    var localctx = new CompilationUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JavapParser.RULE_compilationUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavapParser.T__0) | (1 << JavapParser.T__3) | (1 << JavapParser.T__6) | (1 << JavapParser.T__7) | (1 << JavapParser.T__8) | (1 << JavapParser.T__9) | (1 << JavapParser.T__10) | (1 << JavapParser.T__11))) !== 0)) {
            this.state = 48;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case JavapParser.T__0:
                this.state = 46;
                this.sourceDeclaration();
                break;
            case JavapParser.T__3:
            case JavapParser.T__6:
            case JavapParser.T__7:
            case JavapParser.T__8:
            case JavapParser.T__9:
            case JavapParser.T__10:
            case JavapParser.T__11:
                this.state = 47;
                this.classOrInterface();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 52;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 53;
        this.match(JavapParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SourceDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_sourceDeclaration;
    return this;
}

SourceDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceDeclarationContext.prototype.constructor = SourceDeclarationContext;


SourceDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterSourceDeclaration(this);
	}
};

SourceDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitSourceDeclaration(this);
	}
};

SourceDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitSourceDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.SourceDeclarationContext = SourceDeclarationContext;

JavapParser.prototype.sourceDeclaration = function() {

    var localctx = new SourceDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JavapParser.RULE_sourceDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(JavapParser.T__0);
        this.state = 56;
        this.match(JavapParser.T__1);
        this.state = 57;
        this.match(JavapParser.T__2);
        this.state = 61;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 58;
                this.matchWildcard(); 
            }
            this.state = 63;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

        this.state = 64;
        this.match(JavapParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassOrInterfaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_classOrInterface;
    return this;
}

ClassOrInterfaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassOrInterfaceContext.prototype.constructor = ClassOrInterfaceContext;

ClassOrInterfaceContext.prototype.classDeclaration = function() {
    return this.getTypedRuleContext(ClassDeclarationContext,0);
};

ClassOrInterfaceContext.prototype.interfaceDeclaration = function() {
    return this.getTypedRuleContext(InterfaceDeclarationContext,0);
};

ClassOrInterfaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterClassOrInterface(this);
	}
};

ClassOrInterfaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitClassOrInterface(this);
	}
};

ClassOrInterfaceContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitClassOrInterface(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.ClassOrInterfaceContext = ClassOrInterfaceContext;

JavapParser.prototype.classOrInterface = function() {

    var localctx = new ClassOrInterfaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JavapParser.RULE_classOrInterface);
    try {
        this.state = 68;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 66;
            this.classDeclaration();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 67;
            this.interfaceDeclaration();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_classDeclaration;
    return this;
}

ClassDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclarationContext.prototype.constructor = ClassDeclarationContext;

ClassDeclarationContext.prototype.type = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeContext);
    } else {
        return this.getTypedRuleContext(TypeContext,i);
    }
};

ClassDeclarationContext.prototype.classBody = function() {
    return this.getTypedRuleContext(ClassBodyContext,0);
};

ClassDeclarationContext.prototype.classModifier = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassModifierContext);
    } else {
        return this.getTypedRuleContext(ClassModifierContext,i);
    }
};

ClassDeclarationContext.prototype.typeList = function() {
    return this.getTypedRuleContext(TypeListContext,0);
};

ClassDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitClassDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.ClassDeclarationContext = ClassDeclarationContext;

JavapParser.prototype.classDeclaration = function() {

    var localctx = new ClassDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, JavapParser.RULE_classDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 73;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavapParser.T__7) | (1 << JavapParser.T__8) | (1 << JavapParser.T__9) | (1 << JavapParser.T__10) | (1 << JavapParser.T__11))) !== 0)) {
            this.state = 70;
            this.classModifier();
            this.state = 75;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 76;
        this.match(JavapParser.T__3);
        this.state = 77;
        this.type();
        this.state = 80;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JavapParser.T__4) {
            this.state = 78;
            this.match(JavapParser.T__4);
            this.state = 79;
            this.type();
        }

        this.state = 84;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JavapParser.T__5) {
            this.state = 82;
            this.match(JavapParser.T__5);
            this.state = 83;
            this.typeList();
        }

        this.state = 86;
        this.classBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InterfaceDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_interfaceDeclaration;
    return this;
}

InterfaceDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterfaceDeclarationContext.prototype.constructor = InterfaceDeclarationContext;

InterfaceDeclarationContext.prototype.type = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeContext);
    } else {
        return this.getTypedRuleContext(TypeContext,i);
    }
};

InterfaceDeclarationContext.prototype.interfaceBody = function() {
    return this.getTypedRuleContext(InterfaceBodyContext,0);
};

InterfaceDeclarationContext.prototype.interfaceModifier = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InterfaceModifierContext);
    } else {
        return this.getTypedRuleContext(InterfaceModifierContext,i);
    }
};

InterfaceDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterInterfaceDeclaration(this);
	}
};

InterfaceDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitInterfaceDeclaration(this);
	}
};

InterfaceDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitInterfaceDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.InterfaceDeclarationContext = InterfaceDeclarationContext;

JavapParser.prototype.interfaceDeclaration = function() {

    var localctx = new InterfaceDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, JavapParser.RULE_interfaceDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavapParser.T__7) | (1 << JavapParser.T__8) | (1 << JavapParser.T__9))) !== 0)) {
            this.state = 88;
            this.interfaceModifier();
            this.state = 93;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 94;
        this.match(JavapParser.T__6);
        this.state = 95;
        this.type();
        this.state = 98;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JavapParser.T__4) {
            this.state = 96;
            this.match(JavapParser.T__4);
            this.state = 97;
            this.type();
        }

        this.state = 100;
        this.interfaceBody();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassModifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_classModifier;
    return this;
}

ClassModifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassModifierContext.prototype.constructor = ClassModifierContext;


ClassModifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterClassModifier(this);
	}
};

ClassModifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitClassModifier(this);
	}
};

ClassModifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitClassModifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.ClassModifierContext = ClassModifierContext;

JavapParser.prototype.classModifier = function() {

    var localctx = new ClassModifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, JavapParser.RULE_classModifier);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavapParser.T__7) | (1 << JavapParser.T__8) | (1 << JavapParser.T__9) | (1 << JavapParser.T__10) | (1 << JavapParser.T__11))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InterfaceModifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_interfaceModifier;
    return this;
}

InterfaceModifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterfaceModifierContext.prototype.constructor = InterfaceModifierContext;


InterfaceModifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterInterfaceModifier(this);
	}
};

InterfaceModifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitInterfaceModifier(this);
	}
};

InterfaceModifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitInterfaceModifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.InterfaceModifierContext = InterfaceModifierContext;

JavapParser.prototype.interfaceModifier = function() {

    var localctx = new InterfaceModifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, JavapParser.RULE_interfaceModifier);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JavapParser.T__7) | (1 << JavapParser.T__8) | (1 << JavapParser.T__9))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_typeList;
    return this;
}

TypeListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeListContext.prototype.constructor = TypeListContext;

TypeListContext.prototype.type = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeContext);
    } else {
        return this.getTypedRuleContext(TypeContext,i);
    }
};

TypeListContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterTypeList(this);
	}
};

TypeListContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitTypeList(this);
	}
};

TypeListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitTypeList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.TypeListContext = TypeListContext;

JavapParser.prototype.typeList = function() {

    var localctx = new TypeListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, JavapParser.RULE_typeList);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.type();
        this.state = 111;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 107;
                this.match(JavapParser.T__12);
                this.state = 108;
                this.type(); 
            }
            this.state = 113;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_type;
    return this;
}

TypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeContext.prototype.constructor = TypeContext;

TypeContext.prototype.Identifier = function() {
    return this.getToken(JavapParser.Identifier, 0);
};

TypeContext.prototype.packageName = function() {
    return this.getTypedRuleContext(PackageNameContext,0);
};

TypeContext.prototype.typeArguments = function() {
    return this.getTypedRuleContext(TypeArgumentsContext,0);
};

TypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterType(this);
	}
};

TypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitType(this);
	}
};

TypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.TypeContext = TypeContext;

JavapParser.prototype.type = function() {

    var localctx = new TypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, JavapParser.RULE_type);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
        if(la_===1) {
            this.state = 114;
            this.packageName();
            this.state = 115;
            this.match(JavapParser.T__13);

        }
        this.state = 119;
        this.match(JavapParser.Identifier);
        this.state = 121;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JavapParser.T__14 || _la===JavapParser.T__16) {
            this.state = 120;
            this.typeArguments();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PackageNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_packageName;
    return this;
}

PackageNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PackageNameContext.prototype.constructor = PackageNameContext;

PackageNameContext.prototype.Identifier = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JavapParser.Identifier);
    } else {
        return this.getToken(JavapParser.Identifier, i);
    }
};


PackageNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterPackageName(this);
	}
};

PackageNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.exitPackageName(this);
	}
};

PackageNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JavapVisitor ) {
        return visitor.visitPackageName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JavapParser.PackageNameContext = PackageNameContext;

JavapParser.prototype.packageName = function() {

    var localctx = new PackageNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, JavapParser.RULE_packageName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(JavapParser.Identifier);
        this.state = 128;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 124;
                this.match(JavapParser.T__13);
                this.state = 125;
                this.match(JavapParser.Identifier); 
            }
            this.state = 130;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeArgumentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JavapParser.RULE_typeArguments;
    return this;
}

TypeArgumentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeArgumentsContext.prototype.constructor = TypeArgumentsContext;

TypeArgumentsContext.prototype.typeArgument = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TypeArgumentContext);
    } else {
        return this.getTypedRuleContext(TypeArgumentContext,i);
    }
};

TypeArgumentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof JavapListener ) {
        listener.enterTypeArguments(this);
	}
};
